# MainProjectQt

./: AndroidManifest.xml  CMakeLists.txt  Main.qml  README.md  main.cpp
ModuloComponentes/: CMakeLists.txt
ModuloComponentes/Genericos/: IComboBox.qml  IOverlay.qml  IRectangle.qml  Icon.qml  IconButton.qml  SimpleButton.qml  WindowDragHandler.qml
ModuloComponentes/Graficos/: GraficoNotasAlunos.qml  Js.js
ModuloComponentes/Graficos/ItensGraficos/: IBarCategoryAxis.qml  IBarSeries.qml  IChartView.qml  IHorizontalBarSeries.qml  IHorizontalStackedBarSeries.qml  IStackedBarSeries.qml  IToolTip.qml  IValueAxis.qml  ItemToolTip.qml
ModuloConstantes/: CMakeLists.txt  CofreIcones.qml  Constantes.qml  Cores.qml
